<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragments.RouteConstructorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            app:cornerRadius="25dp"
            app:icon="@drawable/icon_back"
            app:iconGravity="textEnd"
            app:iconPadding="1dp"
            app:iconSize="35dp"
            app:iconTint="@color/black" />

        <include layout="@layout/point_start_item" />

        <include layout="@layout/point_additional_item" />

        <include layout="@layout/point_finish_item" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/black"
            android:text="@string/start"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/showButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/black"
            android:text="@string/show"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/savedRoutesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/black"
            android:text="@string/show_saved_routes"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:cornerRadius="20dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>